--- a/client/templates/views/subchainProtocolAddr.html
+++ b/client/templates/views/subchainProtocolAddr.html
@@ -1,3 +1,3 @@
-<template name = "SubChainProtolAddrPool">
-    {{> reactiveTable collection=subChainProtocolAddrCollection}}
+<template name = "SubChainProtocolAddrPool">
+    {{> reactiveTable collection=subChainProtocolAddrCollection settings=settings}}
 </template>
