--- a/client/main.css
+++ b/client/main.css
@@ -13,6 +13,7 @@ body {
 	padding-left:40px;
 	padding-right:25px;
 	background:#212121;
+	color: #fff;
 }
 .header.show,.header.active{
 	background:rgba(255,255,255,.95);
@@ -20,6 +21,13 @@ body {
 .header .wrap{
 	min-width: 1300px;
 	width:auto;
+}
+
+.title{
+	margin-left: 200px;
+	margin-top: 33px;
+	font-size: 40px;
+	font-style: italic;
 }
 
 .contents{
