check in for backend change and front sample

--- a/client/templates/views/subchainProtocolAddr.html
+++ b/client/templates/views/subchainProtocolAddr.html
@@ -1,3 +1,7 @@
+<!-- <template name="scsPool">
+    {{> reactiveTable settings=settings}}
+</template> -->
+
 <template name = "SubChainProtocolAddrPool">
     {{> reactiveTable collection=subChainProtocolAddrCollection settings=settings }}
 </template>
