--- a/client/templates/views/subchainProtocolAddr.html
+++ b/client/templates/views/subchainProtocolAddr.html
@@ -3,5 +3,27 @@
 </template> -->
 
 <template name = "SubChainProtocolAddrPool">
-    {{> reactiveTable collection=subChainProtocolAddrCollection settings=settings }}
+  <table class="table table-sm table-hover ">
+    <thead>
+    	<tr>
+    		<th>id</th>
+    		<th>SubChainProtocolAddr</th>
+    		<th>bondMin</th>
+    		<th>scsCount</th>
+    		<th>    </th>
+    	</tr>
+    </thead>
+	<tbody>
+    {{#each props}} 
+	 <tr>
+	 	<td>{{_id}}</td>
+    	<td>{{SubChainProtocolAddr}}</td>
+    	<td>{{bondMin}}</td>
+    	<td>{{scsCount}}</td>
+    	<td><button class="btn btn-info" style="font-size: 11px">SCS Detail</button></td>
+	 </tr>
+    {{/each}}
+	</tbody>
+</table>
 </template>
+
