--- a/client/templates/views/subchainProtocolAddr.html
+++ b/client/templates/views/subchainProtocolAddr.html
@@ -6,9 +6,10 @@
   <table class="table table-sm table-hover ">
     <thead>
     	<tr>
-    		<th>SubChainProtocolAddr</th>
-    		<th>bondMin</th>
-    		<th>scsCount</th>
+    		<th>MicroChain Protocol Address</th>
+    		<th>Min Bond</th>
+    		<th>SCS Count</th>
+            <th>Subchain Protocol Name</th>
     		<th></th>
     	</tr>
     </thead>
@@ -18,6 +19,7 @@
     	<td >{{SubChainProtocolAddr}}</td>
     	<td>{{bondMin}}</td>
     	<td>{{scsCount}}</td>
+        <td>{{subChainProtocol}}</td>
     	<td><button class="btn btn-info" style="font-size: 11px">SCS Detail</button></td>
 	 </tr>
     {{/each}}
