--- a/client/templates/views/vnodeModal.html
+++ b/client/templates/views/vnodeModal.html
@@ -8,8 +8,8 @@
 				<table class="table table-hover" >
 					<thead>
     					<tr>
-    					<th >vnodeAddr</th>
-    					<th >link</th>
+    					<th >Vnode Adress</th>
+    					<th >Vnode IP/Port</th>
     					</tr>
     				</thead>
 					<tbody>
