--- a/client/templates/views/vnodeProtocolBaseAddr.html
+++ b/client/templates/views/vnodeProtocolBaseAddr.html
@@ -2,9 +2,9 @@
    <table class="table table-sm table-hover ">
     <thead>
     	<tr>
-    		<th>VnodeProtocolBaseAddr</th>
-    		<th>bondMin</th>
-    		<th>vnodeCount</th>
+    		<th>Vnode Protocol Base Address</th>
+    		<th>Min Bond</th>
+    		<th>Vnode Count</th>
             <th></th>
     	</tr>
     </thead>
