--- a/client/main.css
+++ b/client/main.css
@@ -57,6 +57,12 @@ thead tr {
 	background: #bbb;
 }
 
+.performing {
+	height: 10px;
+	width: 10px;
+	margin: auto
+}
+
 .icon{
 	display:inline-block;
 	background-image:url(../images/icon.png);
